--- a/public/about.html
+++ b/public/about.html
@@ -451,7 +451,7 @@
         </p>
       </div>
       <div class="spacer"></div>
-      <div id="hero-img" class="hero"><img src="c_bridge.jpg" alt="Your Image"></div>
+      <div id="hero-img" class="hero"><img src="GoldenGateBridge.jpg" alt="Your Image"></div>
     </div>
     <script>
       function adjustHeroImgHeight() {
