Update garage-privacy-policy.html with period at end

--- a/public/garage-privacy-policy.html
+++ b/public/garage-privacy-policy.html
@@ -54,7 +54,7 @@
 
   <h2>Contact Us</h2>
 
-  <p>If you have any questions, please contact us at me@chriscartland.com</p>
+  <p>If you have any questions, please contact us at me@chriscartland.com.</p>
 
 </body>
 </html>
