--- a/public/playground/card-layout.html
+++ b/public/playground/card-layout.html
@@ -80,43 +80,43 @@ body {
 
 <div class="container">
   <div class="card">
-    <img src="a_bridge.jpg" alt="Image 1">
+    <img src="bridge.jpg" alt="Bridge">
     <h2>Card Title 1</h2>
     <p>Short text.</p>
     <a href="#">Blog Post</a>
   </div>
   <div class="card">
-    <img src="b_bridge.jpg" alt="Image 2">
+    <img src="bridge_tall.jpg" alt="Tall Bridge">
     <h2>Card Title 2</h2>
     <p>This is a paragraph with a bit more text. It might wrap to a second line within the card.</p>
     <a href="#">GitHub</a>
   </div>
   <div class="card">
-    <img src="c_bridge.jpg" alt="Image 3">
+    <img src="bridge_wide.jpg" alt="Wide Bridge">
     <h2>Card Title 3</h2>
     <p>This is a longer paragraph of text. It will definitely wrap to multiple lines within the card. It might even fill up the entire height of the card, depending on the card's size and the font size.</p>
     <a href="#">Podcast</a>
   </div>
   <div class="card">
-    <img src="a_bridge.jpg" alt="Image 4">
+    <img src="bridge.jpg" alt="Bridge">
     <h2>Card Title 4</h2>
     <p>A sentence with a few words.</p>
     <a href="#">Documentation</a>
   </div>
   <div class="card">
-    <img src="b_bridge.jpg" alt="Image 5">
+    <img src="bridge_tall.jpg" alt="Tall Bridge">
     <h2>Card Title 5</h2>
     <p>This text has medium length. It might wrap, it might not.</p>
     <a href="#">Case Study</a>
   </div>
   <div class="card">
-    <img src="c_bridge.jpg" alt="Image 6">
+    <img src="bridge_wide.jpg" alt="Wide Bridge">
     <h2>Card Title 6</h2>
     <p>This is another long paragraph. It should wrap to several lines, demonstrating how the card's height adjusts to accommodate the content.</p>
     <a href="#">Register</a>
   </div>
   <div class="card">
-    <img src="a_bridge.jpg" alt="Image 7">
+    <img src="bridge.jpg" alt="Bridge">
     <h2>Card Title 7</h2>
     <p>Just a tiny bit of text here.</p>
     <a href="#">Download</a>
