--- a/public/playground/hero.html
+++ b/public/playground/hero.html
@@ -440,7 +440,7 @@
           space.</p>
       </div>
       <div class="spacer"></div>
-      <div id="hero-img" class="hero"><img src="c_bridge.jpg" alt="Your Image"></div>
+      <div id="hero-img" class="hero"><img src="bridge.jpg" alt="Bridge"></div>
     </div>
     <script>
       function adjustHeroImgHeight() {
@@ -462,36 +462,36 @@
         <p>This is a section header. It spans the full row. This contains a paragraph of text that might
           span multiple lines.</p>
       </div>
-      <div class="card"><img src="a_bridge.jpg" alt="Image 1">
+      <div class="card"><img src="bridge.jpg" alt="Bridge">
         <h2>Card Title 1</h2>
         <p>Short text.</p><a href="#" target="_blank">Blog Post</a>
       </div>
-      <div class="card"><img src="b_bridge.jpg" alt="Image 2">
+      <div class="card"><img src="bridge_tall.jpg" alt="Tall Bridge">
         <h2>Card Title 2</h2>
         <p>This is a paragraph with a bit more text. It might wrap to a second line within the card.</p><a href="#"
           target="_blank">GitHub</a>
       </div>
-      <div class="card"><img src="c_bridge.jpg" alt="Image 3">
+      <div class="card"><img src="bridge_wide.jpg" alt="Wide Bridge">
         <h2>Card Title 3</h2>
         <p>This is a longer paragraph of text. It will definitely wrap to multiple lines within the card. It might even
           fill up the entire height of the card, depending on the card's size and the font size.</p><a href="#"
           target="_blank">Podcast</a>
       </div>
-      <div class="card"><img src="a_bridge.jpg" alt="Image 4">
+      <div class="card"><img src="bridge.jpg" alt="Bridge">
         <h2>Card Title 4</h2>
         <p>A sentence with a few words.</p><a href="#" target="_blank">Documentation</a>
       </div>
-      <div class="card"><img src="b_bridge.jpg" alt="Image 5">
+      <div class="card"><img src="bridge_tall.jpg" alt="Tall Bridge">
         <h2>Card Title 5</h2>
         <p>This text has medium length. It might wrap, it might not.</p><a href="#" target="_blank">Case Study</a>
       </div>
-      <div class="card"><img src="c_bridge.jpg" alt="Image 6">
+      <div class="card"><img src="bridge_wide.jpg" alt="Wide Bridge">
         <h2>Card Title 6</h2>
         <p>This is another long paragraph. It should wrap to several lines, demonstrating how the card's height adjusts
           to
           accommodate the content.</p><a href="#" target="_blank">Register</a>
       </div>
-      <div class="card"><img src="a_bridge.jpg" alt="Image 7">
+      <div class="card"><img src="bridge.jpg" alt="Bridge">
         <h2>Card Title 7</h2>
         <p>Just a tiny bit of text here.</p><a href="#" target="_blank">Download</a>
       </div>
@@ -500,10 +500,10 @@
       <div class="social-header">
         <h1>Find me on the Internet</h1>
       </div>
-      <div class="social-item"><img src="a_bridge.jpg" alt="Social Media 1"></div>
-      <div class="social-item"><img src="b_bridge.jpg" alt="Social Media 2"></div>
-      <div class="social-item"><img src="c_bridge.jpg" alt="Social Media 3"></div>
-      <div class="social-item"><img src="a_bridge.jpg" alt="Social Media 4"></div>
+      <div class="social-item"><img src="bridge.jpg" alt="Bridge"></div>
+      <div class="social-item"><img src="bridge_tall.jpg" alt="Tall Bridge"></div>
+      <div class="social-item"><img src="bridge_wide.jpg" alt="Wide Bridge"></div>
+      <div class="social-item"><img src="bridge.jpg" alt="Bridge"></div>
     </div>
   </div>
 </body>
