Make all links open in new tabs

--- a/public/index.html
+++ b/public/index.html
@@ -479,7 +479,7 @@
         </a>
       </div>
       <div class="social-item">
-        <a href="https://github.com/cartland">
+        <a href="https://github.com/cartland" target="_blank">
           <img src="GitHub.png" alt="GitHub">
         </a>
       </div>
