Remove redundant animation css

--- a/public/index.html
+++ b/public/index.html
@@ -111,8 +111,7 @@
     .overlay.show {
       display: block;
       opacity: 1;
-      transition: opacity 0.3s ease;
-      transition: block 0.3s ease;
+      transition: opacity 0.3s ease, display 0.3s ease;
     }
 
     .overlay-content {
