Use self hosted image

--- a/public/playground/paragraph-image.html
+++ b/public/playground/paragraph-image.html
@@ -94,7 +94,7 @@ body {
   </div>
   <div class="spacer"></div>
   <div id="image-div" class="hero">
-    <img src="https://images.squarespace-cdn.com/content/v1/673e7e32839de7577f96b3f8/9edc29f4-c070-4a6a-ba73-552b2d28d658/c_bridge.jpg?format=2500w" alt="Your Image">
+    <img src="bridge.jpg" alt="Hero Image">
   </div>
 </div>
 
