Make Twitter and Threads links open in new page

--- a/public/index.html
+++ b/public/index.html
@@ -483,12 +483,12 @@
         </a>
       </div>
       <div class="social-item">
-        <a href="https://twitter.com/LandOfCart">
+        <a href="https://twitter.com/LandOfCart" target="_blank">
           <img src="Twitter.png" alt="Twitter">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://www.threads.net/@LandOfCart">
+        <a href="https://www.threads.net/@LandOfCart" target="_blank">
           <img src="Threads.png" alt="Threads">
         </a>
       </div>
