--- a/public/index.html
+++ b/public/index.html
@@ -398,6 +398,7 @@
         }
       }
 
+      // Close the menu when clicking on the overlay
       window.addEventListener('click', function (event) {
         var overlay = document.getElementById("overlay");
         if (event.target == overlay) {
@@ -405,28 +406,22 @@
         }
       });
 
-      function underlineActiveLink() {
-        if (window.location.pathname.endsWith('index.html') && window.location.protocol === 'https:') {
-          window.history.replaceState({}, '', '/');
-        }
-
+      function markCurrentNavLinkAsActive() {
         const pathname = window.location.pathname.split('/');
         const windowPathAfterSlash = pathname[pathname.length - 1];
-        console.log(windowPathAfterSlash);
         const navLinks = document.querySelectorAll('.nav-links a');
-
         navLinks.forEach(link => {
-          const linkPath = `${link.getAttribute('href')}`;
-          const matchPath = (windowPathAfterSlash === linkPath);
-          const matchAbout = (windowPathAfterSlash === '' && linkPath === '/');
-          if (matchPath || matchAbout) {
+          const linkHref = `${link.getAttribute('href')}`;
+          const matchPath = (windowPathAfterSlash === linkHref);
+          const matchRoot = (windowPathAfterSlash === '' && linkHref === '/');
+          if (matchPath || matchRoot) {
             link.classList.add('active');
           } else {
             link.classList.remove('active');
           }
         });
       }
-      window.addEventListener('load', underlineActiveLink);
+      window.addEventListener('load', markCurrentNavLinkAsActive);
     </script>
     <div class="hero-container">
       <div id="hero-text" class="hero">
@@ -450,7 +445,9 @@
         </p>
       </div>
       <div class="spacer"></div>
-      <div id="hero-img" class="hero"><img src="GoldenGateBridge.jpg" alt="Your Image"></div>
+      <div id="hero-img" class="hero">
+        <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge at sunset">
+      </div>
     </div>
     <script>
       function adjustHeroImgHeight() {
