--- a/public/projects.html
+++ b/public/projects.html
@@ -8,6 +8,7 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
+    /* Root Variables */
     :root {
       --color: #ffffff;
       --color-link: #cccccc;
@@ -16,6 +17,7 @@
       --color-overlay: #000000;
     }
 
+    /* Base Styles */
     body {
       background-color: var(--background-color);
       font-family: 'Roboto', sans-serif;
@@ -34,13 +36,7 @@
       padding: 32px;
     }
 
-    .header {
-      width: 100%;
-      padding-bottom: 32px;
-      position: relative;
-      z-index: 2;
-    }
-
+    /* Typography */
     h1 {
       font-weight: normal;
       margin-top: 8px;
@@ -52,8 +48,16 @@
       color: var(--color-link);
     }
 
+    /* Header and Navigation */
+    .header {
+      width: 100%;
+      padding-bottom: 32px;
+      position: relative;
+      z-index: 2;
+    }
+
     .header h1 {
-      margin: 0px;
+      margin: 0;
       font-size: 24px;
     }
 
@@ -90,10 +94,46 @@
       margin: 0;
     }
 
+    /* Menu and Overlay */
     .menu-icon {
       display: none;
       font-size: 24px;
       cursor: pointer;
+    }
+
+    .menu-button-container {
+      --menu-icon-size: 36px;
+      width: var(--menu-icon-size);
+      height: var(--menu-icon-size);
+      cursor: pointer;
+      position: relative;
+    }
+
+    .line {
+      background-color: var(--color);
+      height: calc(var(--menu-icon-size) * 3 / 40);
+      width: 100%;
+      position: absolute;
+      left: 0;
+      transition: transform 0.3s ease, top 0.3s ease;
+    }
+
+    .hamburger-top {
+      top: calc(50% - (var(--menu-icon-size) * 4 / 40));
+    }
+
+    .hamburger-bottom {
+      top: calc(50% + (var(--menu-icon-size) * 4 / 40));
+    }
+
+    .menu-button-container.menu-active-mode .hamburger-top {
+      transform: rotate(135deg);
+      top: 50%;
+    }
+
+    .menu-button-container.menu-active-mode .hamburger-bottom {
+      transform: rotate(-135deg);
+      top: 50%;
     }
 
     .overlay {
@@ -136,84 +176,16 @@
       color: var(--color-overlay);
     }
 
-    .menu-button-container {
-      --menu-icon-size: 36px;
-      width: var(--menu-icon-size);
-      height: var(--menu-icon-size);
-      cursor: pointer;
-      position: relative;
+    /* Menu State */
+    .header-content.menu-active-mode {
+      color: var(--color-overlay);
     }
 
-    .line {
-      background-color: var(--color);
-      height: calc(var(--menu-icon-size) * 3 / 40);
-      width: 100%;
-      position: absolute;
-      left: 0;
-      transition: transform 0.3s ease, top 0.3s ease;
+    .header-content.menu-active-mode .line {
+      background-color: var(--color-overlay);
     }
 
-    .hamburger-top {
-      top: calc(50% - (var(--menu-icon-size) * 4 / 40));
-    }
-
-    .hamburger-bottom {
-      top: calc(50% + (var(--menu-icon-size) * 4 / 40));
-    }
-
-    .menu-button-container.menu-active-mode .hamburger-top {
-      transform: rotate(135deg);
-      top: 50%;
-    }
-
-    .menu-button-container.menu-active-mode .hamburger-bottom {
-      transform: rotate(-135deg);
-      top: 50%;
-    }
-
-    .hero-container {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .hero {
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 50%;
-    }
-
-    #hero-img {
-      height: 50%;
-    }
-
-    .hero-container img {
-      border-radius: 64px;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    #hero-text {
-      text-align: left;
-      margin-top: 0px;
-      margin-bottom: 0px;
-      min-height: 148px;
-    }
-
-    #hero-text p {
-      margin-top: 0px;
-      margin-bottom: 16px;
-    }
-
-    .spacer {
-      height: 16px;
-      width: 32px;
-    }
-
+    /* Project Cards */
     .project-container {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -247,7 +219,7 @@
       border-radius: 16px;
       object-fit: cover;
       display: block;
-      margin: 0 auto 0px auto;
+      margin: 0 auto 0;
     }
 
     .card h2 {
@@ -256,13 +228,13 @@
     }
 
     .card p {
-      margin-top: 0px;
+      margin-top: 0;
       margin-bottom: 12px;
     }
 
     .card a {
       display: inline-block;
-      padding: 16px 16px;
+      padding: 16px;
       text-decoration: none;
       border: 1px solid var(--color-link);
       border-radius: 32px;
@@ -270,41 +242,12 @@
       text-transform: uppercase;
     }
 
-    .social-container {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 16px;
-      margin-top: 32px;
+    .spacer {
+      height: 16px;
+      width: 32px;
     }
 
-    .social-header {
-      width: 100%;
-      grid-column: 1 / -1;
-      text-align: center;
-      margin-bottom: 16px;
-    }
-
-    .social-item {
-      aspect-ratio: 1;
-      overflow: hidden;
-    }
-
-    .social-item img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 16px;
-    }
-
-    .header-content.menu-active-mode {
-      color: var(--color-overlay);
-    }
-
-    .header-content.menu-active-mode .line {
-      background-color: var(--color-overlay);
-    }
-
-    /* Small Window */
+    /* Responsive Design */
     @media (max-width: 600px) {
       .nav-links {
         display: none;
@@ -312,28 +255,6 @@
 
       .menu-icon {
         display: block;
-      }
-
-      .hero-container {
-        flex-direction: column;
-        width: 100%;
-      }
-
-      .hero {
-        width: 100%;
-      }
-
-      #hero-text {
-        width: 100%;
-      }
-
-      #hero-img {
-        width: 100%;
-      }
-
-      .hero-container img {
-        height: auto;
-        object-fit: contain;
       }
 
       .project-container {
@@ -346,10 +267,6 @@
 
       .project-container .section-header .half {
         width: 100%;
-      }
-
-      .social-container {
-        grid-template-columns: repeat(2, 1fr);
       }
     }
   </style>
