--- a/public/404.html
+++ b/public/404.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found - Christopher Cartland</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="canonical" href="https://chriscart.land/404">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
@@ -65,8 +68,7 @@
     <div id="message">
       <h2>404</h2>
       <h1>Page Not Found</h1>
-      <p>The page you are looking for does not exist. Please check the URL for mistakes and try again.</p>
-      <p><a href="/">Return to Home</a></p>
+      <p>The page you are looking for does not exist. Please check the URL for mistakes and try again. If you think this is an error, please contact me.</p>
     </div>
   </body>
 </html>
