--- a/public/garage-privacy-policy.html
+++ b/public/garage-privacy-policy.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Garage Privacy Policy</title>
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="canonical" href="https://chriscart.land/garage-privacy-policy">
 </head>
 <body>
 
