Add char set and more Aria labels

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christopher Cartland</title>
   <link rel="canonical" href="https://chriscart.land/">
@@ -300,12 +301,12 @@
   <div class="container">
     <div class="header">
       <div class="header-content menu-aware">
-        <h1><a href="/">Christopher Cartland</a></h1>
+        <h1><a href="/" aria-label="Home - Christopher Cartland">Christopher Cartland</a></h1>
         <nav class="nav-links" aria-label="Main navigation">
-          <a href="/" aria-label="About">
+          <a href="/" aria-label="About - Learn more about Christopher Cartland">
             <h2>About</h2>
           </a>
-          <a href="projects.html" aria-label="Projects">
+          <a href="projects.html" aria-label="Projects - View Christopher Cartland's work">
             <h2>Projects</h2>
           </a>
         </nav>
@@ -321,10 +322,10 @@
     <div class="overlay menu-aware" id="overlay" onclick="toggleMenu()">
       <nav class="overlay-content" aria-label="Mobile navigation">
         <div class="nav-links">
-          <a href="/" onclick="toggleMenu()" aria-label="About">
+          <a href="/" onclick="toggleMenu()" aria-label="About - Learn more about Christopher Cartland">
             <h2>About</h2>
           </a>
-          <a href="projects.html" onclick="toggleMenu()" aria-label="Projects">
+          <a href="projects.html" onclick="toggleMenu()" aria-label="Projects - View Christopher Cartland's work">
             <h2>Projects</h2>
           </a>
         </div>
@@ -362,22 +363,22 @@
         <h1>Find me on the Internet</h1>
       </div>
       <div class="social-item">
-        <a href="https://www.linkedin.com/in/cartland" target="_blank">
+        <a href="https://www.linkedin.com/in/cartland" target="_blank" aria-label="Visit Christopher Cartland's LinkedIn profile">
           <img src="LinkedIn.png" alt="LinkedIn" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://github.com/cartland" target="_blank">
+        <a href="https://github.com/cartland" target="_blank" aria-label="Visit Christopher Cartland's GitHub profile">
           <img src="GitHub.png" alt="GitHub" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://twitter.com/LandOfCart" target="_blank">
+        <a href="https://twitter.com/LandOfCart" target="_blank" aria-label="Visit Christopher Cartland's Twitter profile">
           <img src="Twitter.png" alt="Twitter" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://www.threads.net/@LandOfCart" target="_blank">
+        <a href="https://www.threads.net/@LandOfCart" target="_blank" aria-label="Visit Christopher Cartland's Threads profile">
           <img src="Threads.png" alt="Threads" loading="lazy">
         </a>
       </div>
