Add button role

--- a/public/projects.html
+++ b/public/projects.html
@@ -288,7 +288,12 @@
             <h2>Projects</h2>
           </a>
         </nav>
-        <div class="menu-icon" onclick="toggleMenu()">
+        <div class="menu-icon"
+             onclick="toggleMenu()"
+             role="button"
+             tabindex="0"
+             aria-label="Toggle navigation menu"
+             aria-expanded="false">
           <div class="menu-button-container menu-aware">
             <div class="line hamburger-top"></div>
             <div class="line hamburger-bottom"></div>
