Use projects link instead of projects.html

--- a/public/index.html
+++ b/public/index.html
@@ -306,7 +306,7 @@
           <a href="/" aria-label="About - Learn more about Christopher Cartland">
             <h2>About</h2>
           </a>
-          <a href="projects.html" aria-label="Projects - View Christopher Cartland's work">
+          <a href="projects" aria-label="Projects - View Christopher Cartland's work">
             <h2>Projects</h2>
           </a>
         </nav>
@@ -330,7 +330,7 @@
           <a href="/" onclick="toggleMenu()" aria-label="About - Learn more about Christopher Cartland">
             <h2>About</h2>
           </a>
-          <a href="projects.html" onclick="toggleMenu()" aria-label="Projects - View Christopher Cartland's work">
+          <a href="projects" onclick="toggleMenu()" aria-label="Projects - View Christopher Cartland's work">
             <h2>Projects</h2>
           </a>
         </div>
@@ -354,7 +354,7 @@
         <p>I continue to explore my passion for software by building projects in my free time, such as interactive art,
           and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
 
-        <p>Learn more about some of my <a href="projects.html">Projects</a>.</p>
+        <p>Learn more about some of my <a href="projects">Projects</a>.</p>
 
         </p>
       </div>
