Add noopener noreferrer and font preconnect

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Software Engineer specializing in Android, Mobile, Embedded, and Serverless technologies">
+  <meta name="theme-color" content="#263551">
   <title>Christopher Cartland</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="canonical" href="https://chriscart.land/">
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -368,22 +372,34 @@
         <h1>Find me on the Internet</h1>
       </div>
       <div class="social-item">
-        <a href="https://www.linkedin.com/in/cartland" target="_blank" aria-label="Visit Christopher Cartland's LinkedIn profile">
+        <a href="https://www.linkedin.com/in/cartland"
+           target="_blank"
+           rel="noopener noreferrer"
+           aria-label="Visit Christopher Cartland's LinkedIn profile">
           <img src="LinkedIn.png" alt="LinkedIn" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://github.com/cartland" target="_blank" aria-label="Visit Christopher Cartland's GitHub profile">
+        <a href="https://github.com/cartland"
+           target="_blank"
+           rel="noopener noreferrer"
+           aria-label="Visit Christopher Cartland's GitHub profile">
           <img src="GitHub.png" alt="GitHub" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://twitter.com/LandOfCart" target="_blank" aria-label="Visit Christopher Cartland's Twitter profile">
+        <a href="https://twitter.com/LandOfCart"
+           target="_blank"
+           rel="noopener noreferrer"
+           aria-label="Visit Christopher Cartland's Twitter profile">
           <img src="Twitter.png" alt="Twitter" loading="lazy">
         </a>
       </div>
       <div class="social-item">
-        <a href="https://www.threads.net/@LandOfCart" target="_blank" aria-label="Visit Christopher Cartland's Threads profile">
+        <a href="https://www.threads.net/@LandOfCart"
+           target="_blank"
+           rel="noopener noreferrer"
+           aria-label="Visit Christopher Cartland's Threads profile">
           <img src="Threads.png" alt="Threads" loading="lazy">
         </a>
       </div>
