--- a/public/404.html
+++ b/public/404.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Page Not Found - Christopher Cartland">
+    <meta name="theme-color" content="#263551">
     <title>Page Not Found - Christopher Cartland</title>
     <link rel="manifest" href="/manifest.json">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="canonical" href="https://chriscart.land/404">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
 
