--- a/public/garage-privacy-policy.html
+++ b/public/garage-privacy-policy.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Privacy Policy for Smart Garage Door app by Christopher Cartland">
+  <meta name="theme-color" content="#263551">
   <title>Garage Privacy Policy</title>
   <link rel="manifest" href="/manifest.json">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
