--- a/public/index.html
+++ b/public/index.html
@@ -409,7 +409,10 @@
   <script>
     function toggleMenu() {
       const menuAwareElements = document.querySelectorAll(".menu-aware");
+      const menuIcon = document.querySelector('.menu-icon');
+      const isExpanded = menuIcon.getAttribute('aria-expanded') === 'true';
       menuAwareElements.forEach(element => element.classList.toggle("menu-active-mode"));
+      menuIcon.setAttribute('aria-expanded', !isExpanded);
     }
 
     // Close the menu when clicking on the overlay
