Add header tags

--- a/public/index.html
+++ b/public/index.html
@@ -304,6 +304,7 @@
 <body>
   <div class="container">
     <div class="header">
+      <header>
       <div class="header-content menu-aware">
         <h1><a href="/" aria-label="Home - Christopher Cartland">Christopher Cartland</a></h1>
         <nav class="nav-links" aria-label="Main navigation">
@@ -326,6 +327,7 @@
           </div>
         </div>
       </div>
+      </header>
     </div>
 
     <div class="overlay menu-aware" id="overlay" onclick="toggleMenu()">
