--- a/public/index.html
+++ b/public/index.html
@@ -298,6 +298,17 @@
         grid-template-columns: repeat(2, 1fr);
       }
     }
+
+    /* Focus Styles */
+    a:focus-visible {
+        outline: 2px solid var(--color-link);
+        outline-offset: 2px;
+    }
+
+    .menu-icon:focus-visible {
+        outline: 2px solid var(--color-link);
+        outline-offset: 2px;
+    }
   </style>
 </head>
 
