--- a/public/projects.html
+++ b/public/projects.html
@@ -276,6 +276,17 @@
         width: 100%;
       }
     }
+
+    /* Focus Styles */
+    a:focus-visible {
+        outline: 2px solid var(--color-link);
+        outline-offset: 2px;
+    }
+
+    .menu-icon:focus-visible {
+        outline: 2px solid var(--color-link);
+        outline-offset: 2px;
+    }
   </style>
 </head>
 
