--- a/public/projects.html
+++ b/public/projects.html
@@ -24,6 +24,21 @@
       --color-overlay: #000000;
     }
 
+    /* Skip Link */
+    .skip-link {
+      position: absolute;
+      left: -9999px;
+      z-index: 999;
+      padding: 1em;
+      background-color: white;
+      color: black;
+      text-decoration: none;
+    }
+    .skip-link:focus {
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
     /* Base Styles */
     body {
       background-color: var(--background-color);
@@ -291,6 +306,7 @@
 </head>
 
 <body>
+  <a href="#main-content" class="skip-link">Skip to main content</a>
   <div class="container">
     <div class="header">
       <header>
@@ -332,6 +348,7 @@
       </nav>
     </div>
 
+    <div id="main-content" />
     <div class="project-container">
       <div class="section-header">
         <h1 class="half">Projects</h1>
