Fix illegal div

--- a/public/index.html
+++ b/public/index.html
@@ -370,7 +370,7 @@
       </nav>
     </div>
 
-    <div id="main-content" />
+    <div id="main-content"></div>
     <div class="hero-container">
       <div id="hero-text" class="hero">
         <h1>Software Engineer and Tech Maker</h1>
