--- a/public/projects.html
+++ b/public/projects.html
@@ -348,7 +348,7 @@
       </nav>
     </div>
 
-    <div id="main-content" />
+    <div id="main-content"></div>
     <div class="project-container">
       <div class="section-header">
         <h1 class="half">Projects</h1>
