--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Software Engineer specializing in Android, Mobile, Embedded, and Serverless technologies">
+  <meta name="description"
+    content="Software Engineer specializing in Android, Mobile, Embedded, and Serverless technologies">
   <meta name="theme-color" content="#263551">
   <title>Christopher Cartland</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,6 +35,7 @@
       color: black;
       text-decoration: none;
     }
+
     .skip-link:focus {
       left: 50%;
       transform: translateX(-50%);
@@ -55,7 +57,11 @@
       max-width: 1200px;
       margin: 0 auto;
       justify-content: center;
-      padding: 32px;
+      padding-inline: 32px;
+    }
+
+    #main-content {
+      width: 100%;
     }
 
     /* Typography */
@@ -70,26 +76,33 @@
       color: var(--color-link);
     }
 
-    /* Header and Navigation */
-    .header {
+    header {
       width: 100%;
+    }
+
+    /* Header and Navigation */
+    .header-container {
+      width: 100%;
+      padding-top: 32px;
       padding-bottom: 32px;
       position: relative;
       z-index: 2;
     }
 
-    .header h1 {
+    .header-container h1 {
       margin: 0;
       font-size: 24px;
     }
 
-    .header h1 a {
+    .header-container h1 a {
       text-decoration: none;
       color: inherit;
+      padding-right: 16px;
     }
 
     .header-content {
       width: 100%;
+      height: 36px;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -184,18 +197,20 @@
       height: 100%;
       text-align: center;
       background-color: white;
-      padding-top: 88px;
+      padding-top: 100px;
+      /* 32px + 36px + 32px */
       z-index: 1;
     }
 
     .overlay .nav-links {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: 0px;
     }
 
     .overlay .nav-links a {
       color: var(--color-overlay);
+      padding: 16px;
     }
 
     /* Menu State */
@@ -316,13 +331,13 @@
 
     /* Focus Styles */
     a:focus-visible {
-        outline: 2px solid var(--color-link);
-        outline-offset: 2px;
+      outline: 2px solid var(--color-link);
+      outline-offset: 2px;
     }
 
     .menu-icon:focus-visible {
-        outline: 2px solid var(--color-link);
-        outline-offset: 2px;
+      outline: 2px solid var(--color-link);
+      outline-offset: 2px;
     }
   </style>
 </head>
@@ -330,110 +345,98 @@
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <div class="container">
-    <div class="header">
-      <header>
-      <div class="header-content menu-aware">
-        <h1><a href="/" aria-label="Home - Christopher Cartland">Christopher Cartland</a></h1>
-        <nav class="nav-links" aria-label="Main navigation">
-          <a href="/" aria-label="About - Learn more about Christopher Cartland">
-            <h2>About</h2>
-          </a>
-          <a href="projects" aria-label="Projects - View Christopher Cartland's work">
-            <h2>Projects</h2>
-          </a>
-        </nav>
-        <div class="menu-icon"
-             onclick="toggleMenu()"
-             role="button"
-             tabindex="0"
-             aria-label="Toggle navigation menu"
-             aria-expanded="false">
-          <div class="menu-button-container menu-aware">
-            <div class="line hamburger-top"></div>
-            <div class="line hamburger-bottom"></div>
+    <header>
+      <div class="header-container">
+        <div class="header-content menu-aware">
+          <h1><a href="/" aria-label="Home - Christopher Cartland">Christopher Cartland</a></h1>
+          <nav class="nav-links" aria-label="Main navigation">
+            <a href="/" aria-label="About - Learn more about Christopher Cartland">
+              <h2>About</h2>
+            </a>
+            <a href="projects" aria-label="Projects - View Christopher Cartland's work">
+              <h2>Projects</h2>
+            </a>
+          </nav>
+          <div class="menu-icon" onclick="toggleMenu()" role="button" tabindex="0" aria-label="Toggle navigation menu"
+            aria-expanded="false">
+            <div class="menu-button-container menu-aware">
+              <div class="line hamburger-top"></div>
+              <div class="line hamburger-bottom"></div>
+            </div>
           </div>
         </div>
       </div>
-      </header>
-    </div>
+      <div class="overlay menu-aware" id="overlay" onclick="toggleMenu()">
+        <nav class="overlay-content" aria-label="Mobile navigation">
+          <div class="nav-links">
+            <a href="/" onclick="toggleMenu()" aria-label="About - Learn more about Christopher Cartland">
+              <h2>About</h2>
+            </a>
+            <a href="projects" onclick="toggleMenu()" aria-label="Projects - View Christopher Cartland's work">
+              <h2>Projects</h2>
+            </a>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-    <div class="overlay menu-aware" id="overlay" onclick="toggleMenu()">
-      <nav class="overlay-content" aria-label="Mobile navigation">
-        <div class="nav-links">
-          <a href="/" onclick="toggleMenu()" aria-label="About - Learn more about Christopher Cartland">
-            <h2>About</h2>
-          </a>
-          <a href="projects" onclick="toggleMenu()" aria-label="Projects - View Christopher Cartland's work">
-            <h2>Projects</h2>
+    <main id="main-content">
+      <div class="hero-container">
+        <div id="hero-text" class="hero">
+          <h1>Software Engineer and Tech Maker</h1>
+          <p>Mobile / Android / Embedded / Serverless</p>
+
+          <p>As an engineer with 12 years of experience with Developer Relations at Google, I've built software for
+            Android mobile devices,
+            serverless applications, and internet-connected cars and TVs. My focus has been on developer APIs that
+            enable
+            professionals to create innovative Android experiences.</p>
+
+          <p>Beyond my work at Google, I'm driven by a passion for sustainable technology. In college, I led a team that
+            built a solar-powered car for the World Solar Challenge, where we raced a street-legal vehicle across
+            Australia.</p>
+
+          <p>I continue to explore my passion for software by building projects in my free time, such as interactive
+            art,
+            and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
+
+          <p>Learn more about some of my <a href="projects">Projects</a>.</p>
+        </div>
+        <div class="spacer"></div>
+        <div id="hero-img" class="hero">
+          <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge at sunset" loading="lazy">
+        </div>
+      </div>
+      <div class="social-container">
+        <div class="social-header">
+          <h1>Find me on the Internet</h1>
+        </div>
+        <div class="social-item">
+          <a href="https://www.linkedin.com/in/cartland" target="_blank" rel="noopener noreferrer"
+            aria-label="Visit Christopher Cartland's LinkedIn profile">
+            <img src="LinkedIn.png" alt="LinkedIn" loading="lazy">
           </a>
         </div>
-      </nav>
-    </div>
-
-    <div id="main-content"></div>
-    <div class="hero-container">
-      <div id="hero-text" class="hero">
-        <h1>Software Engineer and Tech Maker</h1>
-        <p>Mobile / Android / Embedded / Serverless</p>
-
-        <p>As an engineer with 12 years of experience with Developer Relations at Google, I've built software for
-          Android mobile devices,
-          serverless applications, and internet-connected cars and TVs. My focus has been on developer APIs that enable
-          professionals to create innovative Android experiences.</p>
-
-        <p>Beyond my work at Google, I'm driven by a passion for sustainable technology. In college, I led a team that
-          built a solar-powered car for the World Solar Challenge, where we raced a street-legal vehicle across
-          Australia.</p>
-
-        <p>I continue to explore my passion for software by building projects in my free time, such as interactive art,
-          and a smart garage door with Internet-connected microcontrollers and a companion Android app.</p>
-
-        <p>Learn more about some of my <a href="projects">Projects</a>.</p>
-
-        </p>
+        <div class="social-item">
+          <a href="https://github.com/cartland" target="_blank" rel="noopener noreferrer"
+            aria-label="Visit Christopher Cartland's GitHub profile">
+            <img src="GitHub.png" alt="GitHub" loading="lazy">
+          </a>
+        </div>
+        <div class="social-item">
+          <a href="https://twitter.com/LandOfCart" target="_blank" rel="noopener noreferrer"
+            aria-label="Visit Christopher Cartland's Twitter profile">
+            <img src="Twitter.png" alt="Twitter" loading="lazy">
+          </a>
+        </div>
+        <div class="social-item">
+          <a href="https://www.threads.net/@LandOfCart" target="_blank" rel="noopener noreferrer"
+            aria-label="Visit Christopher Cartland's Threads profile">
+            <img src="Threads.png" alt="Threads" loading="lazy">
+          </a>
+        </div>
       </div>
-      <div class="spacer"></div>
-      <div id="hero-img" class="hero">
-        <img src="GoldenGateBridge.jpg" alt="Golden Gate Bridge at sunset" loading="lazy">
-      </div>
-    </div>
-    <div class="social-container">
-      <div class="social-header">
-        <h1>Find me on the Internet</h1>
-      </div>
-      <div class="social-item">
-        <a href="https://www.linkedin.com/in/cartland"
-           target="_blank"
-           rel="noopener noreferrer"
-           aria-label="Visit Christopher Cartland's LinkedIn profile">
-          <img src="LinkedIn.png" alt="LinkedIn" loading="lazy">
-        </a>
-      </div>
-      <div class="social-item">
-        <a href="https://github.com/cartland"
-           target="_blank"
-           rel="noopener noreferrer"
-           aria-label="Visit Christopher Cartland's GitHub profile">
-          <img src="GitHub.png" alt="GitHub" loading="lazy">
-        </a>
-      </div>
-      <div class="social-item">
-        <a href="https://twitter.com/LandOfCart"
-           target="_blank"
-           rel="noopener noreferrer"
-           aria-label="Visit Christopher Cartland's Twitter profile">
-          <img src="Twitter.png" alt="Twitter" loading="lazy">
-        </a>
-      </div>
-      <div class="social-item">
-        <a href="https://www.threads.net/@LandOfCart"
-           target="_blank"
-           rel="noopener noreferrer"
-           aria-label="Visit Christopher Cartland's Threads profile">
-          <img src="Threads.png" alt="Threads" loading="lazy">
-        </a>
-      </div>
-    </div>
+    </main>
   </div>
 
   <script>
@@ -443,13 +446,14 @@
       const isExpanded = menuIcon.getAttribute('aria-expanded') === 'true';
       menuAwareElements.forEach(element => element.classList.toggle("menu-active-mode"));
       menuIcon.setAttribute('aria-expanded', !isExpanded);
+      document.body.style.overflow = isExpanded ? '' : 'hidden';
+      overlay.style.pointerEvents = isExpanded ? 'none' : 'all';
     }
 
     // Close the menu when clicking on the overlay
     window.addEventListener('click', function (event) {
-      var overlay = document.getElementById("overlay");
-      if (event.target == overlay) {
-        overlay.style.display = "none";
+      if (event.target.matches('#overlay')) {
+        toggleMenu();
       }
     });
 
@@ -486,7 +490,7 @@
     window.addEventListener('resize', adjustHeroImgHeight);
 
     // Add keyboard support for menu
-    document.querySelector('.menu-icon').addEventListener('keypress', function(e) {
+    document.querySelector('.menu-icon').addEventListener('keypress', function (e) {
       if (e.key === 'Enter' || e.key === ' ') {
         toggleMenu();
       }
