Trap focus on overlay when menu is expanded

--- a/public/index.html
+++ b/public/index.html
@@ -346,7 +346,7 @@
   <a href="#main-content" class="skip-link">Skip to main content</a>
   <div class="container">
     <header>
-      <div class="header-container">
+      <div id="header-container" class="header-container">
         <div class="header-content menu-aware">
           <h1><a href="/" aria-label="Home - Christopher Cartland">Christopher Cartland</a></h1>
           <nav class="nav-links" aria-label="Main navigation">
@@ -366,7 +366,7 @@
           </div>
         </div>
       </div>
-      <div class="overlay menu-aware" id="overlay" onclick="toggleMenu()">
+      <div id="overlay" class="overlay menu-aware" onclick="toggleMenu()">
         <nav class="overlay-content" aria-label="Mobile navigation">
           <div class="nav-links">
             <a href="/" onclick="toggleMenu()" aria-label="About - Learn more about Christopher Cartland">
@@ -448,6 +448,36 @@
       menuIcon.setAttribute('aria-expanded', !isExpanded);
       document.body.style.overflow = isExpanded ? '' : 'hidden';
       overlay.style.pointerEvents = isExpanded ? 'none' : 'all';
+      if (!isExpanded) {
+        document.addEventListener('keydown', trapFocus);
+      } else {
+        document.removeEventListener('keydown', trapFocus);
+      }
+    }
+
+    function trapFocus(e) {
+      const overlay = document.getElementById("overlay");
+      const menuIcon = document.querySelector('.menu-icon');
+      const overlayElements = overlay.querySelectorAll(
+        'a[href], button, [tabindex]:not([tabindex="-1"])'
+      );
+      const focusableElements = [menuIcon, ...Array.from(overlayElements)];
+      const firstFocusable = focusableElements[0];
+      const lastFocusable = focusableElements[focusableElements.length - 1];
+
+      if (e.key === 'Tab' && e.shiftKey) {
+        if (document.activeElement === firstFocusable) {
+          e.preventDefault();
+          lastFocusable.focus();
+        }
+      } else if (e.key === 'Tab') {
+        if (document.activeElement === lastFocusable) {
+          e.preventDefault();
+          firstFocusable.focus();
+        }
+      } else if (e.key === 'Escape') {
+        toggleMenu();
+      }
     }
 
     // Close the menu when clicking on the overlay
