--- a/public/404.html
+++ b/public/404.html
@@ -65,13 +65,30 @@
       a:hover {
         text-decoration: underline;
       }
+
+      .home-link {
+        display: inline-block;
+        margin-top: 24px;
+        padding: 16px;
+        text-decoration: none;
+        border: 1px solid var(--color-link);
+        border-radius: 32px;
+        text-align: center;
+        text-transform: uppercase;
+      }
+
+      .home-link:hover {
+        text-decoration: none;
+        opacity: 0.8;
+      }
     </style>
   </head>
   <body>
-    <div id="message">
+    <main id="message">
       <h2>404</h2>
       <h1>Page Not Found</h1>
       <p>The page you are looking for does not exist. Please check the URL for mistakes and try again. If you think this is an error, please contact me.</p>
-    </div>
+      <a href="/" class="home-link" aria-label="Return to homepage">Return to homepage</a>
+    </main>
   </body>
 </html>
