--- a/public/index.html
+++ b/public/index.html
@@ -436,6 +436,10 @@
         </div>
       </div>
     </main>
+
+    <footer>
+      <p>© 2024 Christopher Cartland</p>
+    </footer>
   </div>
 
   <script>
@@ -496,8 +500,10 @@
         const matchRoot = (windowPathAfterSlash === '' && linkHref === '/');
         if (matchPath || matchRoot) {
           link.classList.add('active');
+          link.setAttribute('aria-current', 'page');
         } else {
           link.classList.remove('active');
+          link.removeAttribute('aria-current');
         }
       });
     }
